# crewchief-assistant

./: .gitignore  CrewChiefAssistant.spec  README.md  build.bat  config.default.json  main.py  pyproject.toml
src/: audio.py  config_manager.py  constants.py  crewchief_sync.py  gamepad.py  models.py  router.py  sounds.py  stt.py
src/ui/: __init__.py  app.py  engine.py  modals.py  widgets.py
src/ui/panels/: control_panel.py  controllers_panel.py  settings_panel.py
